fix: scrollbars

--- a/src/index.css
+++ b/src/index.css
@@ -44,3 +44,19 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+::-webkit-scrollbar-corner {
+  background-color: transparent;
+}
+::-webkit-scrollbar-thumb {
+  background-color: #f7e99e;
+}
+::-webkit-scrollbar-thumb:hover {
+  background-color: #837b52;
+}
